# muensterportal-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  bench_reranker.py  docker-compose.yml  get_page_content.py  justfile  muenster-urls.txt  pyproject.toml
.github/workflows/: ci.yml  ingest.yml
data/: wiki_embeddings.parquet
docs/: mediawiki_content_flow.md  server.md
notebooks/: mistral_test.ipynb
rag/: __init__.py  config.py  embeddings.py  extraction.py  generation.py  pipeline.py  retrieval.py  storage.py  websearch.py
scripts/: inspect_wiki.py
src/muenster4you/: __init__.py  api.py  app.py  config.py  embedder.py  ingest.py  lancedb.py  mediawiki.py  reranker.py  retrieval.py  retriever.py  types.py  websearch.py
src/muenster4you/db/: mediawiki.py
src/muenster4you/rag/: __init__.py  config.py  embeddings.py  extraction.py  generation.py  pipeline.py  retrieval.py  sessions.py  storage.py  websearch.py
tests/: __init__.py  conftest.py  test_api.py  test_reranker.py  test_retrieval.py  test_retriever.py
widgets/: Chat.html  ChatBox.html  Search.html  SearchBox.html
