[project]
name = "muenster4you"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Milden", email = "milden@westphalia-datalab.com" },
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "sentence-transformers>=5.2.0",
    "uvicorn[standard]>=0.24.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "streamlit>=1.31.0",
    "ollama>=0.4.0",
    "mwparserfromhell>=0.6.6",
    "numpy>=1.26.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "ddgs>=8.0.0",
    "mistralai>=1.12.4",
]

[project.optional-dependencies]
test = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
muenster4you = "muenster4you.api:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipykernel>=7.2.0"]

[tool.uv]
default-groups = "all"
